--- a/styles/board.css
+++ b/styles/board.css
@@ -34,6 +34,10 @@ body {
   display: none;
 }
 
+.bold {
+  font-weight: bold;
+}
+
 .moveBackground {
   background-color: rgba(0, 0, 0, 0.2);
 }
@@ -168,9 +172,21 @@ body {
 
 .cardText {
   display: -webkit-box;
-  -webkit-line-clamp: 5; /* Begrenzt den Text auf 5 Zeilen */
+  -webkit-line-clamp: 5;
+  /* Begrenzt den Text auf 5 Zeilen */
   -webkit-box-orient: vertical;
   overflow: hidden;
+}
+
+.max-size {
+  max-width: 350px;
+  max-height: 150px;
+  overflow: scroll;
+}
+
+.boardMember-margin {
+  margin-left: 24px;
+  margin-top: 8px;
 }
 
 @media screen and (max-width: 1630px) {
@@ -306,11 +322,11 @@ body {
   .addTaskFormWrapper textarea,
   #category-container,
   #assigned-container,
-  #assigned-container > *,
+  #assigned-container>*,
   .subtasks-container,
-  .subtasks-container > *,
+  .subtasks-container>*,
   #contact-container,
-  #contact-container > *,
+  #contact-container>*,
   .prio-btn {
     width: 90%;
   }
