adding z-index to btn-resp-add so you can see and click it in every viewport

--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -512,6 +512,7 @@ body {
   }
 
   .btn-resp-add {
+    z-index: 999;
     height: 72px;
     width: 72px;
   }
@@ -574,6 +575,7 @@ body {
   }
 
   .btn-resp-add {
+    z-index: 999;
     display: block;
     position: absolute;
     right: 5%;
@@ -785,6 +787,7 @@ body {
   }
 
   .btn-resp-add {
+    z-index: 999;
     display: block;
     position: absolute;
     right: 5%;
