--- a/styles/taskstyle.css
+++ b/styles/taskstyle.css
@@ -488,7 +488,7 @@ ul {
   padding-left: 22px;
 }
 
-.geneneratedSubtasks {
+.generatedSubtasks {
   max-height: 139px;
   overflow-y: auto;
   scrollbar-width: none;
