--- a/styles/board.css
+++ b/styles/board.css
@@ -285,7 +285,7 @@ body {
 @media screen and (max-width: 760px) {
   .parentDiv {
     flex-direction: column;
-    padding-right: 0;
+    padding-right: 16px;
     padding-left: 16px;
   }
 
@@ -333,5 +333,12 @@ body {
   #contact-container>*,
   .prio-btn {
     width: 90%;
+  }
+}
+
+@media (max-width: 300px) {
+  .parentDiv {
+    padding-right: 5px;
+    padding-left: 5px;
   }
 }
