--- a/styles/index.css
+++ b/styles/index.css
@@ -55,6 +55,7 @@ h1 {
 .login-box {
   background-color: white;
   position: relative;
+  max-width: 800px;
   opacity: 0;
   z-index: 5;
   animation: appearLoginField 1s forwards 1s;
