--- a/styles/board.css
+++ b/styles/board.css
@@ -194,10 +194,24 @@ body {
 }
 
 .progress {
-  width: 60%;
+  width: 55%;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
   height: 5px;
+  border-radius: 10px;
+}
+
+.progress-section {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.progress-count {
+  font-size: 9px;
+    font-weight: bold;
+    font-family: Inter;
 }
 
 @media screen and (max-width: 1630px) {
