--- a/templates/editModal.html
+++ b/templates/editModal.html
@@ -38,14 +38,14 @@
             <button type="button"><img src="./img/arrow_down.png"></button>
           </div>
         </div>
-        <div class="contacts font20 display-none" id="edit-contact-container">
+        <div class="edit-contacts font20 display-none" id="edit-contact-container">
           <ul id="editRenderContacts">
           </ul>
         </div>
         <div id="editContactContainerList" class="d-flex flex-row justify-start"> </div>
 
         <label class="font20 label" for="subtasks">Subtasks</label>
-        <div class="subtasks-container font20 w-422 h-51 custom-border pad-18-21">
+        <div class="edit-subtasks-container font20 w-422 h-51 custom-border pad-18-21">
           <div class="subtasks-input" id="subtask-edit-input">
             <input onclick="changeToEditInput()" class="subtask-input  ol-none"
               type="text" placeholder="Add new subtask">
