assignment-contact edit section styling

--- a/styles/taskstyle.css
+++ b/styles/taskstyle.css
@@ -572,7 +572,8 @@ li {
   background-color: lightgray;
 }
 
-.contacts {
+.contacts,
+.edit-contacts {
   margin-top: -15px;
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
