--- a/templates/editModal.html
+++ b/templates/editModal.html
@@ -1,6 +1,6 @@
 <div id="openEditModal" class="modal-backdrop modal dNone">
     <div>
-      <form onsubmit="saveEditTask(taskIndex, e)" class="edit-task-form-board popUpBoardEditTask">
+      <form onsubmit="saveEditTask(taskIndex); return false;" class="edit-task-form-board popUpBoardEditTask">
         <img src="./img/close.svg" alt="Close Add Task Form" class="boardTaskClose"
           onclick="closeEditModal(document.getElementById('openEditModal')); resetPrioButtons();">
         <label for="edit-title" class="font20 label">Title</label>
