--- a/styles/board.css
+++ b/styles/board.css
@@ -83,7 +83,10 @@ body {
 .contact-icon {
   height: 40px;
   width: 40px;
-  margin-right: 4px;
+}
+
+#popUpBoard {
+  z-index: 99;
 }
 
 .popUpBoardBackground {
@@ -258,6 +261,12 @@ body {
   }
 
   .cardText {
+    font-size: small;
+  }
+}
+
+@media screen and (min-width: 871px) and (max-width: 1100px) {
+  .button-add-text {
     font-size: small;
   }
 }
