--- a/styles/taskstyle.css
+++ b/styles/taskstyle.css
@@ -640,8 +640,8 @@ li {
 }
 
 .btn-seperator {
-  margin-left: 8px;
-  margin-right: 8px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .cancel-btn {
@@ -956,6 +956,11 @@ li {
   outline: none;
 }
 
+.circle-picker {
+  margin-left: -10px;
+  margin-right: 5px;
+}
+
 @media (max-width: 370px) {
   .categorys,
   #render-categorys,
@@ -1010,6 +1015,14 @@ li {
     padding: 18px 21px;
     align-items: center;
     font-size: 14px;
+  }
+
+  .btn-seperator {
+    margin-left: 2px;
+    margin-right: 2px;;
+  }
+  .generated-Btn-Container input {
+    margin-right: 5px;;
   }
 }
 
