styling for subtask editing

--- a/styles/taskstyle.css
+++ b/styles/taskstyle.css
@@ -814,6 +814,8 @@ li {
     bottom: 25% !important;
     left: 50% !important;
   }
+
+
 }
 
 @media (max-width: 400px) {
@@ -932,9 +934,6 @@ li {
   height: 48px !important;
 }
 
-.ml-10 {
-  margin-left: 10px;
-}
 
 .ov-scroll {
   overflow-x: scroll;
@@ -971,7 +970,8 @@ li {
   #task-date,
   .subtasks-container,
   .contact-item,
-  .prio-btn {
+  .prio-btn,
+  .generatedSubtasks {
     width: 320px;
   }
 
@@ -1003,7 +1003,8 @@ li {
   .contact-item,
   .contacts,
   #contact-container,
-  .prio-btn {
+  .prio-btn,
+  .generatedSubtasks {
     width: 280px;
   }
 
@@ -1024,6 +1025,7 @@ li {
   .generated-Btn-Container input {
     margin-right: 5px;;
   }
+
 }
 
 @media (max-width: 310px) {
@@ -1037,7 +1039,8 @@ li {
   .subtasks-container,
   .contact-item,
   #contact-container,
-  .prio-btn {
+  .prio-btn,
+  .generatedSubtasks {
     width: 260px;
   }
 
@@ -1219,7 +1222,8 @@ li {
   .subtasks-container,
   .contacts,
   .contact-item,
-  .prio-btn {
+  .prio-btn,
+  .generatedSubtasks {
     width: 422px;
     font-size: 20px;
   }
@@ -1310,7 +1314,8 @@ li {
   .subtasks-container,
   .contacts,
   .contact-item,
-  .prio-btn {
+  .prio-btn,
+  .generatedSubtasks {
     width: 320px;
     font-size: 16px;
   }
@@ -1385,6 +1390,12 @@ li {
     margin-left: 275px;
   }
 
+  .subtask-edit-input {
+    width: 230px;
+  }
+
+
+
   .add-task-section form {
     margin-left: 270px;
   }
@@ -1399,7 +1410,8 @@ li {
   .subtasks-container,
   .contacts,
   .contact-item,
-  .prio-btn {
+  .prio-btn,
+  .generatedSubtasks {
     width: 320px;
     font-size: 18px;
   }
@@ -1463,7 +1475,8 @@ li {
   .subtasks-container,
   .contacts,
   .contact-item,
-  .prio-btn {
+  .prio-btn,
+  .generatedSubtasks {
     width: 363px;
   }
 
@@ -1532,7 +1545,8 @@ li {
   .subtasks-container,
   .contacts,
   .contact-item,
-  .prio-btn {
+  .prio-btn,
+  .generatedSubtasks {
     width: 380px;
   }
 
