fixed a styling issue from the generated Subtasks inside the addTask with a width of 428px

--- a/styles/taskstyle.css
+++ b/styles/taskstyle.css
@@ -745,7 +745,8 @@ li {
   .subtasks-container,
   .contacts,
   .contact-item,
-  .prio-btn {
+  .prio-btn,
+  .generatedSubtasks {
     width: 363px;
     font-size: 16px;
   }
