new class for edit-modal-backgrop, so it doesnt get d-none when under 949px from animation.css

--- a/styles/animations.css
+++ b/styles/animations.css
@@ -38,7 +38,8 @@
   animation-name: slideOut;
 }
 
-.modal-backdrop {
+.modal-backdrop,
+.edit-modal-backdrop {
   position: fixed;
   display: flex;
   justify-content: center;
@@ -50,6 +51,7 @@
   background: rgba(0, 0, 0, 0.5) !important;
   z-index: 999;
 }
+
 
 @media(max-width: 949px) {
   .modal-backdrop {
